--- a/arch/arm/configs/frankenlenok_defconfig
+++ b/arch/arm/configs/frankenlenok_defconfig
@@ -141,6 +141,7 @@ CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
 CONFIG_HOTPLUG=y
+CONFIG_BRICKED_HOTPLUG=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_EXPERT=y
 CONFIG_UID16=y
