--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -486,6 +486,13 @@ config MSM_SHARED_HEAP_ACCESS
 	 Enable support to provide access to clients to certain HLOS regions
 	 which are protected by the secure environment.
 
+config BRICKED_HOTPLUG
+	bool "Enable kernel based mpdecision"
+	depends on MSM_RUN_QUEUE_STATS
+	default y
+	help
+	 This enables kernel based multi core control.
+	 
 source "drivers/soc/qcom/memshare/Kconfig"
 
 endif # ARCH_MSM
