--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -63,3 +63,4 @@ obj-$(CONFIG_MSM8994_V1_PMUIRQ_WA) += cti-pmu-irq.o
 obj-$(CONFIG_MSM_XPU_ERR_FATAL) += scm-xpu.o
 
 obj-$(CONFIG_MSM_SHARED_HEAP_ACCESS) += shared_memory.o
+obj-$(CONFIG_BRICKED_HOTPLUG) += bricked_hotplug.o
