--- a/arch/arm/configs/frankenlenok_defconfig
+++ b/arch/arm/configs/frankenlenok_defconfig
@@ -32,7 +32,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="frankenlenok-0.0"
+CONFIG_LOCALVERSION="frankenlenok-0.2"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -141,7 +141,6 @@ CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
 CONFIG_HOTPLUG=y
-CONFIG_BRICKED_HOTPLUG=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_EXPERT=y
 CONFIG_UID16=y
@@ -603,6 +602,7 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
 CONFIG_PM_CLK=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
 CONFIG_DEDUCE_WAKEUP_REASONS=y
@@ -1467,6 +1467,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
@@ -2809,6 +2810,7 @@ CONFIG_MSM_CPU_PWR_CTL=y
 CONFIG_MSM_XPU_ERR_FATAL=y
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_SHARED_HEAP_ACCESS is not set
+CONFIG_BRICKED_HOTPLUG=y
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 
 #
